--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,6 +4,10 @@ plugins {
 
 dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation "io.github.resilience4j:resilience4j-spring-boot3:2.2.0"
+    implementation "org.springframework.boot:spring-boot-starter-aop"
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 springBoot {
