--- a/api/build.gradle
+++ b/api/build.gradle
@@ -8,6 +8,10 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-aop"
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    testImplementation ('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
 }
 
 springBoot {
