--- a/api/src/test/resources/application-test.yml
+++ b/api/src/test/resources/application-test.yml
@@ -26,7 +26,7 @@ resilience4j:
     instances:
       employeeApiRetry:
         max-attempts: 2
-        wait-duration: 1s
+        wait-duration: 2s
         enable-exponential-backoff: true
         exponential-backoff-multiplier: 2
         retry-exceptions:
@@ -34,3 +34,4 @@ resilience4j:
             - com.reliaquest.api.exceptions.ExternalServiceException
         ignore-exceptions:
             - com.reliaquest.api.exceptions.InvalidInputException
+            - com.reliaquest.api.exceptions.EmployeeNotFoundException
