--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -11,7 +11,7 @@ logging:
   level:
     com.reliaquest.api: INFO
     reactor.netty.http.client: INFO
-    io.github.resilience4j.retry: DEBUG
+    io.github.resilience4j.retry: INFO
     springframework.web.reactive.function.client: INFO
 
 # Resilience4j configuration
